# blink-os

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: build.yml
config/bootloaders/isolinux/: isolinux.cfg
config/desktop/: lightdm-gtk-greeter.conf
config/desktop/nemo/: nemo-settings.ini
config/desktop/panel/: panel-layout.ini
config/desktop/theme/: gtk-settings.ini
config/hooks/: 00-generate-assets.hook.chroot  01-blink-theme.hook.chroot  02-live-user.hook.chroot  03-splash.hook.chroot  03-vbox-guest.hook.chroot
config/includes.chroot/etc/X11/xorg.conf.d/: 20-vboxvideo.conf
config/includes.chroot/etc/lightdm/: lightdm.conf
config/includes.chroot/etc/xdg/openbox/: autostart
config/includes.chroot/usr/share/xsessions/: blink.desktop
config/installer/: branding.desc  settings.conf  show.qml
src/blink-files/: meson.build
src/blink-files/include/: files.h
src/blink-files/src/: files.c  main.c
src/blink-panel/: meson.build
src/blink-panel/include/: panel.h  plugin.h
src/blink-panel/plugins/: clock.c  launcher.c  network.c  volume.c
src/blink-panel/src/: main.c  panel.c
src/blink-settings/src/: main.c
src/blink-shell/: meson.build
src/blink-shell/include/: config.h  ipc.h  shell.h
src/blink-shell/src/: config.c  ipc.c  main.c  shell.c
